--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@
 
 :root
 {
-    --blue: #287bff
-    --white: #fff
-    --grey: #f5f5f5
-    --black1: #222
-    --black2: #999
+    --blue: #287bff;
+    --white: #fff;
+    --grey: #f5f5f5;
+    --black1: #222;
+    --black2: #999;
 }
 
 body
@@ -35,5 +35,41 @@ body
     width: 300px;
     height: 100%;
     background: var(--blue);
-    border-left: 10px solid ;
+    border-left: 10px solid var(--blue);
+    transition: 0.5s;
+    overflow: hidden;
+}
+.navigation ul
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+.navigation ul li{
+    position: relative;
+    width: 200%;
+    list-style: none;
+}
+.navigation ul li:hover
+{
+    background: var(--white);
+}
+.navigation ul li:nth-child(1)
+{
+    margin-bottom: 40px;
+    pointer-events: none;
+}
+.navigation ul li a
+{
+    position: relative;
+    display: block;
+    width: 100%;
+    display: flex;
+    text-decoration: none;
+    color: var(--white);
+}
+.navigation ul li:hover a
+{
+    color: var(--blue);
 }
