--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 :root
 {
-    --blue: #287bff;
+    --laranja: #F26E22;
     --white: #fff;
     --grey: #f5f5f5;
     --black1: #222;
@@ -34,8 +34,8 @@ body
     position: fixed;
     width: 300px;
     height: 100%;
-    background: var(--blue);
-    border-left: 10px solid var(--blue);
+    background: var(--laranja);
+    border-left: 10px solid var(--laranja);
     transition: 0.5s;
     overflow: hidden;
 }
@@ -50,6 +50,8 @@ body
     position: relative;
     width: 200%;
     list-style: none;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
 }
 .navigation ul li:hover
 {
@@ -72,4 +74,27 @@ body
 .navigation ul li:hover a
 {
     color: var(--blue);
+}
+.navigation ul li a .icon
+{
+    position: relative;
+    display: block;
+    min-width: 60px;
+    height: 60px;
+    line-height: 70px;
+    text-align: center;
+}
+.navigation ul li a .icon ion-icon
+{
+    font-size: 1.75em;
+}
+.navigation ul li a .tittle
+{
+    position: relative;
+    display: block;
+    padding: 0 10px;
+    height: 60px;
+    line-height: 60px;
+    text-align: start;
+    white-space: nowrap;
 }
