--- a/style.css
+++ b/style.css
@@ -48,12 +48,13 @@ body
 }
 .navigation ul li{
     position: relative;
-    width: 200%;
+    width: 100%;
     list-style: none;
     border-top-left-radius: 30px;
     border-bottom-left-radius: 30px;
 }
-.navigation ul li:hover
+.navigation ul li:hover, 
+.navigation ul li.hovered
 {
     background: var(--white);
 }
@@ -71,9 +72,10 @@ body
     text-decoration: none;
     color: var(--white);
 }
-.navigation ul li:hover a
+.navigation ul li:hover a,
+.navigation ul li.hovered a
 {
-    color: var(--blue);
+    color: var(--laranja);
 }
 .navigation ul li a .icon
 {
@@ -97,4 +99,35 @@ body
     line-height: 60px;
     text-align: start;
     white-space: nowrap;
+}
+
+/* curve outside */
+
+.navigation ul li:hover a::before,
+.navigation ul li.hovered a::before
+{
+    content: '';
+    position: absolute;
+    right: 0;
+    top: -50px;
+    width: 50px;
+    height: 50px;
+    background: transparent;
+    border-radius: 50%;
+    box-shadow: 35px 35px 0 10px var(--white);
+    pointer-events: none;
+}
+.navigation ul li:hover a::after,
+.navigation ul li.hovered a::after
+{
+    content: '';
+    position: absolute;
+    right: 0;
+    bottom: -50px;
+    width: 50px;
+    height: 50px;
+    background: transparent;
+    border-radius: 50%;
+    box-shadow: 35px -35px 0 10px var(--white);
+    pointer-events: none;
 }
