--- a/style.css
+++ b/style.css
@@ -39,6 +39,12 @@ body
     transition: 0.5s;
     overflow: hidden;
 }
+
+.navigation.active
+{
+    width: 80px;
+}
+
 .navigation ul
 {
     position: absolute;
@@ -46,6 +52,7 @@ body
     left: 0;
     width: 100%;
 }
+
 .navigation ul li{
     position: relative;
     width: 100%;
@@ -53,16 +60,19 @@ body
     border-top-left-radius: 30px;
     border-bottom-left-radius: 30px;
 }
+
 .navigation ul li:hover, 
 .navigation ul li.hovered
 {
     background: var(--white);
 }
+
 .navigation ul li:nth-child(1)
 {
     margin-bottom: 40px;
     pointer-events: none;
 }
+
 .navigation ul li a
 {
     position: relative;
@@ -72,11 +82,13 @@ body
     text-decoration: none;
     color: var(--white);
 }
+
 .navigation ul li:hover a,
 .navigation ul li.hovered a
 {
     color: var(--laranja);
 }
+
 .navigation ul li a .icon
 {
     position: relative;
@@ -86,10 +98,12 @@ body
     line-height: 70px;
     text-align: center;
 }
+
 .navigation ul li a .icon ion-icon
 {
     font-size: 1.75em;
 }
+
 .navigation ul li a .tittle
 {
     position: relative;
@@ -117,6 +131,7 @@ body
     box-shadow: 35px 35px 0 10px var(--white);
     pointer-events: none;
 }
+
 .navigation ul li:hover a::after,
 .navigation ul li.hovered a::after
 {
@@ -130,4 +145,119 @@ body
     border-radius: 50%;
     box-shadow: 35px -35px 0 10px var(--white);
     pointer-events: none;
+}
+/* main */
+
+.main
+{
+    position: absolute;
+    width: calc(100% - 300px);
+    left: 300px;
+    min-height: 100vh;
+    background: var(--white);
+    transition: 0.5s;
+}
+
+.main.active
+{
+    width: calc(100% - 80px);
+    left: 80px;
+}
+
+.topbar
+{
+    width: 100%;
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
+}
+
+.toggle
+{
+    position: relative;
+    top: 0;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.5em;
+    cursor: pointer;
+}
+
+.search
+{
+    position: relative;
+    width: 400px;
+    margin: 0 10px;
+}
+
+.search label
+{
+    position: relative;
+    width: 100%;
+}
+
+.search label input
+{
+    width: 100%;
+    height: 40px;
+    border-radius: 40px;
+    padding: 5px 20px;
+    padding-left: 35px;
+    font-size: 18px;
+    outline: none;
+    border: 1px solid var(--black2);
+}
+
+.search label ion-icon
+{
+    position: absolute;
+    top: 0;
+    left: 10px;
+    font-size: 1.2em;
+}
+
+.user
+{
+    position: relative;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.user img
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.cardBox
+{
+    position: relative;
+    width: 100%;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 30px;
+}
+
+.cardBox .card
+{
+    position: relative;
+    background: var(--white);
+    padding: 30px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: space-between;
+    cursor: pointer;
+    box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
 }
