--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 :root
 {
-    --laranja: #F26E22;
+    --Orange: #F26E22;
     --white: #fff;
     --grey: #f5f5f5;
     --black1: #222;
@@ -34,8 +34,8 @@ body
     position: fixed;
     width: 300px;
     height: 100%;
-    background: var(--laranja);
-    border-left: 10px solid var(--laranja);
+    background: var(--Orange);
+    border-left: 10px solid var(--Orange);
     transition: 0.5s;
     overflow: hidden;
 }
@@ -86,7 +86,7 @@ body
 .navigation ul li:hover a,
 .navigation ul li.hovered a
 {
-    color: var(--laranja);
+    color: var(--Orange);
 }
 
 .navigation ul li a .icon
@@ -260,4 +260,171 @@ body
     justify-content: space-between;
     cursor: pointer;
     box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
+}
+
+.cardBox .card .numbers
+{
+    position: relative;
+    font-weight: 500;
+    font-size: 2.5em;
+    color: var(--Orange);
+}
+
+.cardBox .card .cardName
+{
+    color: var(--black2);
+    font-size: 1.1em;
+    margin-top: 5px;
+}
+
+.cardBox .card .iconBx
+{
+    font-size: 3em;
+    color: var(--black2);
+}
+
+.cardBox .card:hover
+{
+    background: var(--Orange);
+}
+.cardBox .card:hover .numbers,
+.cardBox .card:hover .cardName,
+.cardBox .card:hover .iconBx
+{
+    color: var(--white); 
+}
+
+.details
+{
+    position: relative;
+    width: 100%;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-gap: 30px;
+    /* margin-top: 10px; */
+}
+
+.details .recentOrders
+{
+    position: relative;
+    display: grid;
+    min-height: 500px;
+    background: var(--white);
+    padding: 20px;
+    box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
+    border-radius: 20px;
+}
+
+.cardHeader
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.cardHeader h2
+{
+    font-weight: 600;
+    color: var(--Orange);
+}
+
+.btn
+{
+    position: relative;
+    padding: 5px 10px;
+    background: var(--Orange);
+    text-decoration: none;
+    color: var(--white);
+    border-radius: 6px;
+}
+
+.details table
+{
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 10px;
+}
+
+.details table thead td
+{
+    font-weight: 600;
+}
+
+.details .recentOrders table tr
+{
+    color: var(--black1);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.details .recentOrders table tr:last-child
+{
+    border-bottom: none;
+}
+
+.details .recentOrders table tbody tr:hover
+{
+    background: var(--Orange);
+    color: var(--white);
+}
+
+.details .recentOrders table tr td
+{
+    padding: 10px;
+}
+
+.details .recentOrders table tr td:last-child
+{
+    text-align: end;
+}
+
+.details .recentOrders table tr td:nth-child(2)
+{
+    text-align: end;
+}
+
+.details .recentOrders table tr td:nth-child(3)
+{
+    text-align: center;
+}
+
+.status.delivered, .status.concluded
+{
+    padding: 2px 4px;
+    background: #8de02c;
+    color: var(--white);
+    border-radius: 4px;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+
+.status.pending
+{
+    padding: 2px 4px;
+    background: #f9ca3f;
+    color: var(--white);
+    border-radius: 4px;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.status.return
+{
+    padding: 2px 4px;
+    background: #f00;
+    color: var(--white);
+    border-radius: 4px;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.status.inprogress
+{
+    padding: 2px 4px;
+    background: #1795ce;
+    color: var(--white);
+    border-radius: 4px;
+    font-size: 14px;
+    font-weight: 500;
 }
